--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700" rel="stylesheet">
 	<link rel="stylesheet" href="frontendassets/css/main.css">
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10" />
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11" /> -->
+	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
