--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -89,6 +89,17 @@
                     </div> <!-- table-responsive //end -->
                 </div> <!-- card-body end// -->
             </div> <!-- card end// -->
+            <div class="pagination-area mt-30 mb-50">
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination">
+                    <% for (let i = 1; i <= totalPages; i++) { %>
+                      <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                        <a class="page-link" href="/admin/orders?page=<%= i %>"><%= i %></a>
+                      </li>
+                    <% } %>
+                  </ul>
+                </nav>
+              </div>
 
         </section> <!-- content-main end// -->
     </main><!-- Bootstrap CSS (include this in the head section) -->
