--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/adminheader') %>
+const ITEMS_PER_PAGE = 10; <%- include('../partials/adminheader') %>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10" />
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <body>
@@ -74,7 +74,7 @@
         <!-- card-body end// -->
       </div>
       <!-- card end// -->
-      <div class="pagination-area mt-30 mb-50">
+      <!-- <div class="pagination-area mt-30 mb-50">
         <nav aria-label="Page navigation example">
           <ul class="pagination justify-content-start">
             <li class="page-item active">
@@ -89,6 +89,17 @@
                 ><i class="material-icons md-chevron_right"></i
               ></a>
             </li>
+          </ul>
+        </nav>
+      </div> -->
+      <div class="pagination-area mt-30 mb-50">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <% for (let i = 1; i <= totalPages; i++) { %>
+              <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                <a class="page-link" href="/admin/product-list?page=<%= i %>"><%= i %></a>
+              </li>
+            <% } %>
           </ul>
         </nav>
       </div>
