--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -73,21 +73,16 @@
           
         <!-- card ends -->
       </div>
-      <div class="pagination-area mt-15 mb-50">
+     
+
+      <div class="pagination-area mt-30 mb-50">
         <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-start">
-            <li class="page-item active">
-              <a class="page-link" href="#">01</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">02</a></li>
-            <li class="page-item"><a class="page-link" href="#">03</a></li>
-            <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-            <li class="page-item"><a class="page-link" href="#">16</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#"
-                ><i class="material-icons md-chevron_right"></i
-              ></a>
-            </li>
+          <ul class="pagination">
+            <% for (let i = 1; i <= totalPages; i++) { %>
+              <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                <a class="page-link" href="/admin/users-list?page=<%= i %>"><%= i %></a>
+              </li>
+            <% } %>
           </ul>
         </nav>
       </div>
