--- a/views/user/order-list.ejs
+++ b/views/user/order-list.ejs
@@ -136,6 +136,19 @@
     </div>
   </div>
 </div>
+<!-- Add pagination controls at the bottom of your table -->
+<div class="d-flex justify-content-center">
+  <nav aria-label="Page navigation">
+    <ul class="pagination">
+      <% for (let i = 1; i <= totalPages; i++) { %>
+        <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+          <a class="page-link" href="/order-list?page=<%= i %>"><%= i %></a>
+        </li>
+      <% } %>
+    </ul>
+  </nav>
+</div>
+
 
 <%-include('../partials/footer') %>
 
