--- a/views/user/order-details.ejs
+++ b/views/user/order-details.ejs
@@ -48,7 +48,7 @@
                             <small class="text-muted">Order ID: <%= order._id %> </small>
                         </div>
                         <div class="col-lg-6 col-md-6 ms-auto text-md-end">
-                            <button class="btn btn-outline-primary" onclick="tracking()">Track Order</button>
+                            <!-- <button class="btn btn-outline-primary" onclick="tracking()">Track Order</button> -->
                            
                         <a href="" class="btn btn-primary">invoice</a>
                         
