before filtering size and color

--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -278,8 +278,7 @@
                     </div>
                 </div>
             </div> 
-            </div>
-            <!-- card end// -->
+
             <div class="card mb-4">
               <div class="card-header">
                 <h4>Organization</h4>
@@ -299,18 +298,25 @@
                   <div class="col-sm-6 mb-3">
                     <label class="form-label">Sub-category</label>
                     <select class="form-select" name="SubCategory">
-                      <option>Nike</option>
-                      <option>Adidas</option>
-                      <option>Puma</option>
-                      <option>Sketchers</option>
+                      <option>Men</option>
+                      <option>Women</option>
+                      <option>Kids</option>
                     </select>
                   </div>
                 </div>
                 <!-- row.// -->
               </div>
             </div>
+
+            </div>
+            <!-- card end// -->
+            
           </div>
         </div>
+        
+        
+        
+        
         <script>
           document.getElementById('admin-login-form').addEventListener('submit', function (event) {
               // ... (existing validation logic) ...
