--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -250,70 +250,65 @@
         </div>
       </div>
 
-      <div class="colorlib-product">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 offset-sm-2 text-center colorlib-heading">
-              <h2>Best Sellers</h2>
-            </div>
-          </div>
           
 
           <!-- dynamic products -->
-          <div class="tab-pane fade show active" id="tab-one" role="tabpanel" aria-labelledby="tab-one">
-            <div class="row product-grid-4 padding-custom">
-              <% products.forEach(product => { %>
-              <div class="col-lg-3 col-md-4 col-12 col-sm-6">
-                <div class="product-cart-wrap mb-30">
-                  <div class="product-img-action-wrap">
-                    <div class="product-img product-img-zoom">
-                      <a href="#">
-                        <img class="default-img" src="/uploads/products/<%= product.image[0] %>" style="height: 270px; width: 270px;"  alt="">
-                        <img class="hover-img" src="frontendassets/imgs/shop/product-1-2.jpg" alt="">
-                      </a>
+          <div class="tab-content wow fadeIn animated animated animated" id="myTabContent" style="visibility: visible;">
+            <div class="tab-pane fade show active" id="tab-one" role="tabpanel" aria-labelledby="tab-one">
+              <div class="row product-grid-4 padding-custom">
+              
+                <% products.forEach(product => { %>
+                  <div class="col-lg-3 col-md-4 col-12 col-sm-6">
+                    <div class="product-cart-wrap mb-30">
+                      <div class="product-img-action-wrap">
+                        <div class="product-img product-img-zoom">
+                          <a href="#">
+                            <img class="default-img" src="/uploads/products/<%= product.image[0] %>" style="height: 270px; width: 270px;"  alt="">
+                            <img class="hover-img" src="frontendassets/imgs/shop/product-1-2.jpg" alt="">
+                          </a>
+                        </div>
+                        <div class="product-action-1">
+                          <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a>
+                          <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
+                          <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+                        </div>
+                        
+                      </div>
+                      <div class="product-content-wrap">
+                        <div class="product-category">
+                          <a href="shop-grid-right.html">Shoes</a>
+                        </div>
+                        <h2><a href="/product-details?productId=<%= product._id %>"><%= product.name %></a></h2>
+                        
+                        <div class="product-price">
+                          <span><%= product.salePrice %></span>
+                          <span class="old-price">$5000.8</span>
+                        </div>
+                        <div class="product-action-1 show">
+                          <% if(product.units === 0){ %>
+                            <p class="text-danger">Out of stock</p>
+                            <% } else { %>
+      
+                          
+                          <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html"><i class="fi-rs-shopping-bag-add"></i></a>
+                                            <% } %>
+                        </div>
+                      </div>
                     </div>
-                    <div class="product-action-1">
-                      <a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a>
-                      <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
-                      <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
-                    </div>
-                    
                   </div>
-                  <div class="product-content-wrap">
-                    <div class="product-category">
-                      <a href="shop-grid-right.html">Shoes</a>
-                    </div>
-                    <h2><a href="/product-details?productId=<%= product._id %>"><%= product.name %></a></h2>
-                    
-                    <div class="product-price">
-                      <span><%= product.regularPrice %></span>
-                      <span class="old-price">$245.8</span>
-                    </div>
-                    <div class="product-action-1 show">
-                      <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html"><i class="fi-rs-shopping-bag-add"></i></a>
-                    </div>
-                  </div>
-                </div>
+                   <% });  %>
               </div>
-                         <% });  %>
+              <!--End product-grid-4-->
             </div>
-            <!--End product-grid-4-->
+            
           </div>
     
           <!-- dynamic products end -->
 
-          <div class="row">
-            <div class="col-md-12 text-center">
-              <p>
-                <a href="#" class="btn btn-primary btn-lg">Shop All Products</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+        
 
       <%-include('../partials/footer') %>
-    </div>
+   
 
     <div class="gototop js-top">
       <a href="#" class="js-gotop"><i class="ion-ios-arrow-up"></i></a>
@@ -321,26 +316,26 @@
 
     <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
-    <!-- popper -->
-    <script src="js/popper.min.js"></script>
-    <!-- bootstrap 4.1 -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- jQuery easing -->
-    <script src="js/jquery.easing.1.3.js"></script>
-    <!-- Waypoints -->
-    <script src="js/jquery.waypoints.min.js"></script>
-    <!-- Flexslider -->
-    <script src="js/jquery.flexslider-min.js"></script>
-    <!-- Owl carousel -->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- Magnific Popup -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/magnific-popup-options.js"></script>
-    <!-- Date Picker -->
-    <script src="js/bootstrap-datepicker.js"></script>
-    <!-- Stellar Parallax -->
-    <script src="js/jquery.stellar.min.js"></script>
-    <!-- Main -->
-    <script src="js/main.js"></script>
+   <!-- popper -->
+   <script src="js/popper.min.js"></script>
+   <!-- bootstrap 4.1 -->
+   <script src="js/bootstrap.min.js"></script>
+   <!-- jQuery easing -->
+   <script src="js/jquery.easing.1.3.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Flexslider -->
+	<script src="js/jquery.flexslider-min.js"></script>
+	<!-- Owl carousel -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- Magnific Popup -->
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/magnific-popup-options.js"></script>
+	<!-- Date Picker -->
+	<script src="js/bootstrap-datepicker.js"></script>
+	<!-- Stellar Parallax -->
+	<script src="js/jquery.stellar.min.js"></script>
+	<!-- Main -->
+	<script src="js/main.js"></script>
   </body>
 </html>
