filtering 3 segments done

--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -109,10 +109,10 @@
                   <input
                     class="form-check-input"
                     type="radio"
-                    style="background-color: white; border-color: black"
+                    style="background-color: white; border-color: white"
                     name="color"
                     id="inlineRadio2"
-                    value="black"
+                    value="white"
                   />
                   <label class="form-check-label" for="inlineRadio2"
                     >white</label
