--- a/views/partials/productAside.ejs
+++ b/views/partials/productAside.ejs
@@ -6,7 +6,7 @@
                 <ul>
                     <a href="/show-products"><li>All</li></a><hr>
                     <% categories.forEach((item) =>{ %>
-                        <li class="mt-3"><a href="/brand/<%=item.name%>"><%= item.name %></a></li>
+                        <li class="mt-3"><a href="/brand?id=<%=item.name%>"><%= item.name %></a></li>
                         <hr>
                     <% }); %>
                     
@@ -19,9 +19,9 @@
                 <div class="side border mb-1">
                     <h3 class=" mb-3">Price</h3>
                     <ul>
-                        <li class="mt-4 "><a href="/priceFilter/4000 ">under 4000<span class="number"></span></a></li><hr>
-                        <li class="mt-4 "><a href="/priceFilter/6000 ">under 6000<span class="number"></span></a></li><hr>
-                        <li class="mt-4 "><a href="/priceFilter/9999">under 10000<span class="number"></span></a></li><hr>
+                        <li class="mt-4 "><a href="/priceFilter?id=4000 ">under 4000<span class="number"></span></a></li><hr>
+                        <li class="mt-4 "><a href="/priceFilter?id=6000 ">under 6000<span class="number"></span></a></li><hr>
+                        <li class="mt-4 "><a href="/priceFilter?id=9999">under 10000<span class="number"></span></a></li><hr>
                         <br>
                     </ul>
                 </div>
@@ -31,12 +31,12 @@
             <div class="side border mb-1 mt-3">
                 <h3 class="mb-3">Colors</h3>
                 <ul>
-                    <li class="mt-4 "><a href="/color?id=black">Black</a></li><hr>
-                    <li class="mt-4 "><a href="/color?id=White">White</a></li><hr>
-                    <li class="mt-4 "><a href="/color?id=Blue">Blue</a></li><hr>
-                    <li class="mt-4 "><a href="/color?id=Red">Red</a></li><hr>
-                    <li class="mt-4 "><a href="/color?id=Orange">Orange</a></li><hr>
+                    <li class="mt-4 "><a href="/color?id=red">Red</a></li><hr>
+                    <li class="mt-4 "><a href="/color?id=white">White</a></li><hr>
                     <li class="mt-4 "><a href="/color?id=Brown">Brown</a></li><hr>
+                    <li class="mt-4 "><a href="/color?id=black">Black</a></li><hr>
+                    <li class="mt-4 "><a href="/color?id=Blue">Blue</a></li><hr>
+                    <li class="mt-4 "><a href="/color?id=Organge">Orange</a></li><hr>
                     <br>
                 </ul>
             </div>
