without men category rest filtering done

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -34,8 +34,8 @@
               <li class="has-dropdown">
                 <a href="/men">Men</a>
               </li>
-              <li><a href="/women">Women</a></li>
-              <li><a href="/kids">Kids</a></li>
+              <li><a href="/subCategory?id=women">Women</a></li>
+              <li><a href="/subCategory?id=kids">Kids</a></li>
               <li><a href="/items">products</a></li>
               <li>
                 <a href="/cart" ><i class="icon-shopping-cart"></i>Cart <span id="cartCount" style="color: rgb(7, 202, 14); font-family:Arial, Helvetica, sans-serif; font: bolder;" >[0] </span></a>
