--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -94,7 +94,7 @@
 			  <h5 class="my-3"><%= user.name %></h5>
 			  <div class="d-flex justify-content-center mb-2">
 				<a href="/order-list"><button type="button" class="btn btn-primary">Orders</button></a>
-				<button type="button" class="btn btn-outline-primary ms-1">Wishlist</button>
+				<!-- <button type="button" class="btn btn-outline-primary ms-1">Wishlist</button> -->
 			  </div>
 			</div>
 		  </div>
