--- a/views/user/items.ejs
+++ b/views/user/items.ejs
@@ -46,7 +46,63 @@
 	<div id="page">
 		<%-include('../partials/nav')  %>
 	
-      
+		<div class="breadcrumbs">
+			<div class="container">
+				<div class="row">   
+					
+				   <div class="col">
+					 
+						<p class="bread"><span><a href="index.html">Home</a></span> / <span>Women</span></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="breadcrumbs-two">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<div class="breadcrumbs-img" style="background-image: url(images/cover-img-1.jpg);">
+							<h2>Mens</h2>
+						</div>
+						<div class="menu text-center">
+							<p><a href="#">New Arrivals</a> <a href="#">Best Sellers</a> <a href="#">Extended Widths</a> <a href="#">Sale</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="colorlib-featured">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4 text-center">
+						<div class="featured">
+							<div class="featured-img featured-img-2" style="background-image: url(images/img_bg_2.jpg);">
+								<h2>Casuals</h2>
+								<p><a href="#" class="btn btn-primary btn-lg">Shop now</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-4 text-center">
+						<div class="featured">
+							<div class="featured-img featured-img-2" style="background-image: url(images/women.jpg);">
+								<h2>Dress</h2>
+								<p><a href="#" class="btn btn-primary btn-lg">Shop now</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-4 text-center">
+						<div class="featured">
+							<div class="featured-img featured-img-2" style="background-image: url(images/item-11.jpg);">
+								<h2>Sports</h2>
+								<p><a href="#" class="btn btn-primary btn-lg">Shop now</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="colorlib-product">
 			<div class="container">
 				<div class="row">
@@ -63,7 +119,7 @@
 							
 
 							<% products.forEach(product => { %>
-								<div class="col-lg-3 col-md-4 col-12 col-sm-6">
+								<div class="col-lg-4 mb-4 text-center">
 									<div class="product-cart-wrap mb-30">
 										<div class="product-img-action-wrap">
 											<div class="product-img product-img-zoom">
