--- a/views/user/women.ejs
+++ b/views/user/women.ejs
@@ -1,41 +1,4 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-	<title>Footwear - Free Bootstrap 4 Template by Colorlib</title>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700" rel="stylesheet">
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Ion Icon Fonts-->
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
-
-	<!-- Flexslider  -->
-	<link rel="stylesheet" href="css/flexslider.css">
-
-	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	
-	<!-- Date Picker -->
-	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
-	<!-- Flaticons  -->
-	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
-
-	</head>
+<%-include('../partials/header') %>
 	<body>
 		
 	<div class="colorlib-loader"></div>
@@ -99,45 +62,57 @@
 			</div>
 		</div>
 
-		<div class="colorlib-product">
-			<div class="container">
-				<div class="row">
-					<%-include('../partials/sidebar')  %>
-					<div class="col-lg-9 col-xl-9">
-						<div class="row row-pb-md">
-							<div class="col-lg-4 mb-4 text-center">
-								<div class="product-entry border">
-									<a href="#" class="prod-img">
-										<img src="images/item-1.jpg" class="img-fluid" alt="Free html5 bootstrap 4 template">
-									</a>
-									<div class="desc">
-										<h2><a href="#">Women's Boots Shoes Maca</a></h2>
-										<span class="price">$139.00</span>
+		<div class="tab-content wow fadeIn animated animated animated" id="myTabContent" style="visibility: visible;">
+			<div class="tab-pane fade show active" id="tab-one" role="tabpanel" aria-labelledby="tab-one">
+				<div class="row product-grid-4 padding-custom">
+				
+					<% products.forEach(product => { %>
+						<div class="col-lg-3 col-md-4 col-12 col-sm-6">
+							<div class="product-cart-wrap mb-30">
+								<div class="product-img-action-wrap">
+									<div class="product-img product-img-zoom">
+										<a href="#">
+											<img class="default-img" src="/uploads/products/<%= product.image[0] %>" style="height: 270px; width: 270px;"  alt="">
+											<img class="hover-img" src="frontendassets/imgs/shop/product-1-2.jpg" alt="">
+										</a>
+									</div>
+									<div class="product-action-1">
+										<a aria-label="Quick view" class="action-btn hover-up" data-bs-toggle="modal" data-bs-target="#quickViewModal"><i class="fi-rs-eye"></i></a>
+										<a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
+										<a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+									</div>
+									
+								</div>
+								<div class="product-content-wrap">
+									<div class="product-category">
+										<a href="shop-grid-right.html">Shoes</a>
+									</div>
+									<h2><a href="/product-details?productId=<%= product._id %>"><%= product.name %></a></h2>
+									
+									<div class="product-price">
+										<span><%= product.salePrice %></span>
+										<span class="old-price">$5000.8</span>
+									</div>
+									<div class="product-action-1 show">
+										<% if(product.units === 0){ %>
+											<p class="text-danger">Out of stock</p>
+											<% } else { %>
+
+										
+										<a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html"><i class="fi-rs-shopping-bag-add"></i></a>
+                                      <% } %>
 									</div>
 								</div>
 							</div>
-						<div class="row">
-							<!-- <div class="col-md-12 text-center">
-								<div class="block-27">
-				               <ul>
-					               <li><a href="#"><i class="ion-ios-arrow-back"></i></a></li>
-				                  <li class="active"><span>1</span></li>
-				                  <li><a href="#">2</a></li>
-				                  <li><a href="#">3</a></li>
-				                  <li><a href="#">4</a></li>
-				                  <li><a href="#">5</a></li>
-				                  <li><a href="#"><i class="ion-ios-arrow-forward"></i></a></li>
-				               </ul>
-				            </div>
-							</div> -->
 						</div>
-					</div>
+						 <% });  %>
 				</div>
+				<!--End product-grid-4-->
 			</div>
+			
 		</div>
-
 		<%-include('../partials/footer') %>
-	</div>
+	
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="ion-ios-arrow-up"></i></a>
