--- a/views/user/items.ejs
+++ b/views/user/items.ejs
@@ -158,15 +158,31 @@
 									</div>
 								</div>
 								 <% });  %>
+								 <div class="d-flex justify-content-center">
+									<nav aria-label="Page navigation">
+									  <ul class="pagination">
+										<% for (let i = 1; i <= totalPages; i++) { %>
+										  <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+											<a class="page-link" href="?page=<%= i %>" class="<%= i === currentPage ? 'active' : '' %>"><%= i %></a>
+										  </li>
+										<% } %>
+									  </ul>
+									</nav>
+								  </div>
 								 <% } %>
 
 						    
 					</div>
 
+
 					</div>
+					
 				</div>
+
+				
 			</div>
 		</div>
+		
 
 
 		
