--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,8 +15,8 @@
           </div>
         </div>
         <form class="login-form" action="/login" method="post" id="login-form">
-          <input type="text" placeholder="username" name="name" value="ahmed"  required>
-          <input type="password" placeholder="password" name="password" value="11111111" required>
+          <input type="text" placeholder="username" name="name" value="sahal"  required>
+          <input type="password" placeholder="password" name="password" value="dem5ha8promiseA" required>
           <button type="submit">Login</button>
           <div class="error-message">
               <% if (errorMessage) { %>
