coupon admin side front end

--- a/views/partials/adminaside.ejs
+++ b/views/partials/adminaside.ejs
@@ -58,7 +58,7 @@
           </a>
         
         
-          <a class="menu-link" href="page-reviews.html">
+          <a class="menu-link" href="/admin/coupon">
             <i class="icon material-icons md-comment"></i>
             <span class="text">Coupon Management</span>
           </a>
