--- a/views/user/buy-now.ejs
+++ b/views/user/buy-now.ejs
@@ -12,6 +12,7 @@
     href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700"
     rel="stylesheet"
   />
+  
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -376,56 +377,113 @@
         </div>
       </div>
 
-      
+      <!-- coupon modal -->
+      <div class="modal fade top" id="modalCoupon" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true"
+    data-bs-backdrop="true">
+    <div class="modal-dialog modal-frame modal-top modal-notify modal-success" role="document">
+      <!--Content-->
+      <div class="modal-content">
+        <!--Body-->
+        <div class="modal-body">
+          <h1></h1>
+          <%if(coupons){%>
+            <%for(i=0;i<coupons.length;i++){ %>
+                <div class="row d-flex justify-content-center align-items-center border rounded">
+                  <div class="col-12 col-md-12 d-flex">
+                    <div class="code-container col-3 col-md-3 d-flex align-items-center">
+                      <p>
+                        <span class="badge" id="couponCode<%= i %>" style="color: black;">
+                          <%= coupons[i].name %>
+                        </span>
+                        <input type="text" value="<%= coupons[i].code %>" id="myInput<%= i %>" style="border: none;" readonly>
+  
+                      </p>
+                    </div>
+                    <div class="content-copy-container col-9 col-md-9 d-flex align-items-center">
+                      <p class="pt-3 mx-4">
+                        <strong class="ml-5"> &#8377;<%= coupons[i].offerPrice %> discount</strong>.
+                      </p>
+                      <button type="button" class="btn btn-success copy-button ms-auto" data-index="<%= i %>"
+                        onclick="myFunction('<%= i %>')">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-minus" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M5.5 9.5A.5.5 0 0 1 6 9h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z"/>
+                            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                            <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+                          </svg>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              <% } %>
+              <% } %>
+  
+              <div class="close-container d-flex justify-content-end mt-2">
+                <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">No, thanks</button>
+              </div>
+        </div>
+      </div>
+      <!--/.Content-->
+    </div>
+  </div>
+      <!-- coupon modal ends -->
+
+
+
 
       <div class="col-lg-3">
-
+<!-- coupons -->
+      <% if(coupons){ %>
         <div class="card mb-3 border shadow-0">
           <div class="card-body">
             <form>
-              <button
-                type="button"
-                id="availableCoupon"
-                class="btn btn-outline-primary mt-2"
-                data-bs-toggle="modal"
-                data-bs-target="#modalCoupon"
-              >
-                Available Coupons
-              </button>
+              <button type="button" id="availableCoupon" class="btn btn-outline-primary mt-2" data-bs-toggle="modal"
+data-bs-target="#modalCoupon">Available Coupons</button>
               <div class="form-group">
-                <label class="form-label">Have coupon?</label>
-                <div class="input-group">
-                  <input
-                    type="text"
-                    class="form-control border mb-1"
-                    id="coupon"
-                    name="coupon"
-                    placeholder="Coupon code"
-                  />
-                  <a
-                    onclick="applyCoupon()"
-                    id="applyButton"
-                    class="btn btn-light border"
-                    >Apply</a
-                  >
-                </div>
+                  <label class="form-label">Have coupon?</label>
+                  <div class="input-group">
+                      <input type="text" class="form-control border mb-1" id="coupon" name="coupon" placeholder="Coupon code" />
+                      <a onclick="applyCoupon(' <%= totalPrice %>','<%=userData.wallet%>')" id="applyButton" class="btn btn-light border">Apply</a>
+                  </div>
               </div>
-            </form>
+          </form>
           </div>
         </div>
+        <% }else{ %>
+          <input type="hidden" class="form-control border" id="coupon" name="coupon" value="0" placeholder="Coupon code" />
+          <%}%>
+        <!-- coupons end -->
 
         <div class="card shadow-0 border">
           <div class="card-body">
             <div class="d-flex justify-content-between">
+              
               <p class="mb-2">Total price:</p>
+              
               <input
                 type="hidden"
                 name="totalPrice"
+                id="totalPriceInput"
                 value="<%= totalPrice %>"
               />
-              <p class="mb-2">₹ <b><%=totalPrice.toFixed(2) %> </b></p>
+             
+              <p class="mb-2" id="displayedTotal">₹ <b><%=totalPrice.toFixed(2) %> </b></p>
             </div>
+            <div class="d-flex justify-content-between">
+              <p class="mb-2">Discount:</p>
+              <p class="mb-2 text-success" id="discount">0</p>
+          </div>
+            
+            
             <hr />
+            <div class="d-flex justify-content-between">
+              <p class="mb-2">Total price:</p>
+
+              <p class="mb-2 fw-bold " id="gt"> 
+                <%= totalPrice %>
+                      </p>
+                 
+          </div>
+
           </div>
           <div class="mt-3">
             <button
@@ -476,6 +534,67 @@
 <!-- Main -->
 <script src="/js/main.js"></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+
+<script>
+
+function applyCoupon(total,wallet){
+        const coupon = document.getElementById('coupon').value
+        $.ajax({
+            url:'/apply-coupon',
+            method:'post',
+            data:{
+                coupon,
+                total,
+            },
+                success:(response)=>{
+                document.getElementById('coupon').readOnly = true;
+                document.getElementById('availableCoupon').style.display = 'none';
+                document.getElementById('applyButton').disabled =true;
+                const gtElement = document.getElementById('gt');
+    const discountElement = document.getElementById('discount');
+
+    // Update the displayed total with the discount
+    const gt = parseFloat(gtElement.innerHTML);
+    gtElement.innerHTML = `₹ ${(gt - parseFloat(response.offerPrice)).toFixed(2)}`;
+                 // Update the discount
+    const discount = parseFloat(discountElement.innerHTML);
+    discountElement.innerHTML = (discount + response.offerPrice).toFixed(2);
+
+    const tot = parseFloat(gtElement.innerHTML);
+                if (tot >=wallet) {
+                // Enable the button
+                document.getElementById('walletButton').disabled = false;
+                document.getElementById('walletButton').innerHTML = "Use wallet";
+            } else {
+                // Disable the button and display "Insufficient Funds"
+                document.getElementById('walletButton').disabled = true;
+                document.getElementById('walletButton').innerHTML = "Insufficient Funds";
+            }
+            }
+        })
+    }
+
+
+      
+  function myFunction(index) {
+  var copyText = document.getElementById("myInput" + index);
+  copyText.select();
+  copyText.setSelectionRange(0, 99999)
+  navigator.clipboard.writeText(copyText.value)
+    .then(function() {
+      console.log("Text copied to clipboard: " + copyText.value);
+            var noThanksButton = document.querySelector('.close-container button');
+      if (noThanksButton) {
+        noThanksButton.click();
+      }
+    })
+    .catch(function(err) {
+      console.error("Failed to copy text: " + err);
+    });
+  }
+
+</script>
 
 <script>
   const handlePaymentSelection = (selectedPaymentMethod) => {
@@ -607,4 +726,7 @@
         }
       }
     });
+
+
+    
 </script>
